--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -6,4 +6,11 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://localhost:8090/eureka
 eureka.instance.prefer-ip-address=true
+
 eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.value}}
+
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.auto-offset-reset=earliest
