Updated customer service configuration

--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -20,6 +20,8 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
 #Kafka Config
-spring.kafka.bootstrap-servers=localhost:29092
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.cloud.stream.kafka.binder.brokers=localhost:29092
+spring.cloud.stream.bindings.customer-created-out-0.destination=customer-events
+#spring.kafka.bootstrap-servers=localhost:29092
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
