--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -9,8 +9,14 @@ eureka.instance.prefer-ip-address=true
 
 eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.value}}
 
-spring.kafka.bootstrap-servers=localhost:29092
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
-spring.kafka.consumer.auto-offset-reset=earliest
+#Kafka Config
+spring.cloud.stream.kafka.binder.brokers=localhost:29092
+spring.cloud.stream.bindings.customer-created-in-0.destination=customer-events
+spring.cloud.stream.bindings.customer-created-in-0.group=search-service
+
+#spring.kafka.bootstrap-servers=localhost:29092
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+#spring.kafka.consumer.properties.spring.json.trusted.packages=*
+#spring.kafka.consumer.auto-offset-reset=earliest
+
