--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -22,6 +22,10 @@ spring.jpa.properties.hibernate.format_sql=true
 #Kafka Config
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-event
+spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-event
+spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
+spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-updated-event
 #spring.kafka.bootstrap-servers=localhost:29092
 # spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 # spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
