--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -13,7 +13,7 @@ eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.val
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
-spring.cloud.function.definition=customerCreated;addressCreated
+spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated
 spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
 spring.cloud.stream.bindings.addressCreated-in-0.group=search-service
 spring.cloud.stream.bindings.addressDeleted-in-0.destination=address-deleted-event
@@ -26,6 +26,7 @@ spring.cloud.stream.bindings.addressUpdated-in-0.group=search-service
 # spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 # spring.kafka.consumer.properties.spring.json.trusted.packages=*
 # spring.kafka.consumer.auto-offset-reset=earliest
+
 
 
 
