--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -25,7 +25,12 @@ spring.cloud.stream.bindings.customerCreated-out-0.destination=customer-created-
 spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-event
 spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
 spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-updated-event
+
+spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMedium-created-event
+spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMedium-deleted-event
+spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMedium-updated-event
 #spring.kafka.bootstrap-servers=localhost:29092
 # spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 # spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
 
