--- a/authservice-dev.properties
+++ b/authservice-dev.properties
@@ -18,4 +18,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 spring.jpa.properties.hibernate.format_sql=true
+
+jwt.secret.key=+VWtE5JIlbXqSd6NuR5mklPGX1fTxWRdLDvwm8MNeJU=
+jwt.expiration=60000
