Added secret key

--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -33,4 +33,5 @@ spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMediu
 # spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 # spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
-
+jwt.secret.key=+VWtE5JIlbXqSd6NuR5mklPGX1fTxWRdLDvwm8MNeJU=
+jwt.expiration=60000
