Added secret key

--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -34,7 +34,8 @@ spring.cloud.stream.bindings.contactMediumUpdated-in-0.group=search-service
 # spring.kafka.consumer.properties.spring.json.trusted.packages=*
 # spring.kafka.consumer.auto-offset-reset=earliest
 
-
+jwt.secret.key=+VWtE5JIlbXqSd6NuR5mklPGX1fTxWRdLDvwm8MNeJU=
+jwt.expiration=60000
 
 
 
