--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -26,6 +26,8 @@ spring.cloud.stream.bindings.addressCreated-out-0.destination=address-created-ev
 spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-event
 spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-updated-event
 
+spring.cloud.stream.bindings.customerUpdated-out-0.destination=customer-updated-event
+
 spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMedium-created-event
 spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMedium-deleted-event
 spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMedium-updated-event
@@ -35,3 +37,4 @@ spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMediu
 
 jwt.secret.key=+VWtE5JIlbXqSd6NuR5mklPGX1fTxWRdLDvwm8MNeJU=
 jwt.expiration=60000
+
