--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -13,13 +13,16 @@ eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.val
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
-spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumDeleted;contactMediumUpdated
+spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumDeleted;contactMediumUpdated;customerUpdated
 spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
 spring.cloud.stream.bindings.addressCreated-in-0.group=search-service
 spring.cloud.stream.bindings.addressDeleted-in-0.destination=address-deleted-event
 spring.cloud.stream.bindings.addressDeleted-in-0.group=search-service
 spring.cloud.stream.bindings.addressUpdated-in-0.destination=address-updated-event
 spring.cloud.stream.bindings.addressUpdated-in-0.group=search-service
+
+spring.cloud.stream.bindings.customerUpdated-in-0.destination=customer-updated-event
+spring.cloud.stream.bindings.customerUpdated-in-0.group=search-service
 
 spring.cloud.stream.bindings.contactMediumCreated-in-0.destination=contactMedium-created-event
 spring.cloud.stream.bindings.contactMediumCreated-in-0.group=search-service
@@ -36,6 +39,7 @@ spring.cloud.stream.bindings.contactMediumUpdated-in-0.group=search-service
 
 jwt.secret.key=+VWtE5JIlbXqSd6NuR5mklPGX1fTxWRdLDvwm8MNeJU=
 jwt.expiration=60000
+
 
 
 
