--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -27,6 +27,7 @@ spring.cloud.stream.bindings.addressDeleted-out-0.destination=address-deleted-ev
 spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-updated-event
 
 spring.cloud.stream.bindings.customerUpdated-out-0.destination=customer-updated-event
+spring.cloud.stream.bindings.customerDeleted-out-0.destination=customer-deleted-event
 
 spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMedium-created-event
 spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMedium-deleted-event
@@ -37,4 +38,5 @@ spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMediu
 
 jwt.secret.key=+VWtE5JIlbXqSd6NuR5mklPGX1fTxWRdLDvwm8MNeJU=
 jwt.expiration=60000
+
 
