--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -29,6 +29,10 @@ spring.cloud.stream.bindings.addressUpdated-out-0.destination=address-updated-ev
 spring.cloud.stream.bindings.customerUpdated-out-0.destination=customer-updated-event
 spring.cloud.stream.bindings.customerDeleted-out-0.destination=customer-deleted-event
 
+spring.cloud.stream.bindings.billingAccountCreated-out-0.destination=billingAccount-created-event
+spring.cloud.stream.bindings.billingAccountDeleted-out-0.destination=billingAccount-deleted-event
+spring.cloud.stream.bindings.billingAccountUpdated-out-0.destination=billingAccount-updated-event
+
 spring.cloud.stream.bindings.contactMediumCreated-out-0.destination=contactMedium-created-event
 spring.cloud.stream.bindings.contactMediumDeleted-out-0.destination=contactMedium-deleted-event
 spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMedium-updated-event
@@ -38,5 +42,6 @@ spring.cloud.stream.bindings.contactMediumUpdated-out-0.destination=contactMediu
 
 jwt.secret.key=+VWtE5JIlbXqSd6NuR5mklPGX1fTxWRdLDvwm8MNeJU=
 jwt.expiration=60000
+
 
 
