--- a/searchservice-dev.properties
+++ b/searchservice-dev.properties
@@ -13,7 +13,7 @@ eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.val
 spring.cloud.stream.kafka.binder.brokers=localhost:29092
 spring.cloud.stream.bindings.customerCreated-in-0.destination=customer-created-event
 spring.cloud.stream.bindings.customerCreated-in-0.group=search-service
-spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumDeleted;contactMediumUpdated;customerUpdated;customerDeleted
+spring.cloud.function.definition=customerCreated;addressCreated;addressDeleted;addressUpdated;contactMediumCreated;contactMediumDeleted;contactMediumUpdated;customerUpdated;customerDeleted;billingAccountCreated;billingAccountUpdated;billingAccountDeleted
 spring.cloud.stream.bindings.addressCreated-in-0.destination=address-created-event
 spring.cloud.stream.bindings.addressCreated-in-0.group=search-service
 spring.cloud.stream.bindings.addressDeleted-in-0.destination=address-deleted-event
@@ -25,6 +25,13 @@ spring.cloud.stream.bindings.customerUpdated-in-0.destination=customer-updated-e
 spring.cloud.stream.bindings.customerUpdated-in-0.group=search-service
 spring.cloud.stream.bindings.customerDeleted-in-0.destination=customer-deleted-event
 spring.cloud.stream.bindings.customerDeleted-in-0.group=search-service
+
+spring.cloud.stream.bindings.billingAccountCreated-in-0.destination=billingAccount-created-event
+spring.cloud.stream.bindings.billingAccountCreated-in-0.group=search-service
+spring.cloud.stream.bindings.billingAccountDeleted-in-0.destination=billingAccount-deleted-event
+spring.cloud.stream.bindings.billingAccountDeleted-in-0.group=search-service
+spring.cloud.stream.bindings.billingAccountUpdated-in-0.destination=billingAccount-updated-event
+spring.cloud.stream.bindings.billingAccountUpdated-in-0.group=search-service
 
 spring.cloud.stream.bindings.contactMediumCreated-in-0.destination=contactMedium-created-event
 spring.cloud.stream.bindings.contactMediumCreated-in-0.group=search-service
@@ -41,6 +48,7 @@ spring.cloud.stream.bindings.contactMediumUpdated-in-0.group=search-service
 
 jwt.secret.key=+VWtE5JIlbXqSd6NuR5mklPGX1fTxWRdLDvwm8MNeJU=
 jwt.expiration=60000
+
 
 
 
